[gd_scene load_steps=3 format=3 uid="uid://terrain_list_item"]

[ext_resource type="Script" path="res://Scripts/ui/terrain_config/terrain_list_item.gd" id="list_item_script"]

[sub_resource type="StyleBoxFlat" id="icon_container_style"]
bg_color = Color(0.1, 0.12, 0.15, 0.3)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.24, 0.3, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TerrainListItem" type="Button"]
custom_minimum_size = Vector2(0, 90)
theme_override_constants/outline_size = 0
script = ExtResource("list_item_script")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
theme_override_constants/separation = 10

[node name="IconContainer" type="Panel" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
theme_override_styles/panel = SubResource("icon_container_style")

[node name="Icon" type="TextureRect" parent="HBox/IconContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Name"
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "x99"
horizontal_alignment = 2
vertical_alignment = 1
